# version-aware-precommit

./: .pre-commit-config.yaml  Makefile  README.md  demo.sh  pyproject.toml
.history/: .gitignore_20250713004116  CONTRIBUTING_20250713004146.md  CONTRIBUTING_20250713004147.md  LICENSE_20250713004054
.history/scripts/: __init___20250713004120.py
examples/: basic_usage.py
scripts/: precommit_version_checker.py
